@@ -126,7 +126,8 @@ var DimpCompose = {
             }
         });
         if (identity.bcc) {
-            $('bcc').setValue(($F('bcc') ? $F('bcc') + ', ' : '') + identity.bcc);
+            $('bcc').setValue(($F('bcc') ? $F('bcc') + ', ' : '') + identity.bcc)
+                .fire('AutoComplete:reset');
             this.toggleCC('bcc');
         }
         this.setSaveSentMail(identity.sm_save);
